// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamburger renders correctly given all props 1`] = `
<body>
  <div>
    <svg
      height="25"
      viewBox="0 0 25 25"
      width="25"
    >
      <line
        stroke="red"
        stroke-linecap="round"
        stroke-width="10"
        x1="10"
        x2="15"
        y1="10"
        y2="10"
      />
      <line
        stroke="red"
        stroke-linecap="round"
        stroke-width="10"
        x1="10"
        x2="15"
        y1="12.5"
        y2="12.5"
      />
      <line
        stroke="red"
        stroke-linecap="round"
        stroke-width="10"
        x1="10"
        x2="15"
        y1="15"
        y2="15"
      />
    </svg>
  </div>
</body>
`;

exports[`Hamburger renders correctly given minimum props 1`] = `
<body>
  <div>
    <svg
      height="25"
      viewBox="0 0 25 25"
      width="25"
    >
      <line
        stroke="black"
        stroke-linecap="round"
        stroke-width="10"
        x1="10"
        x2="15"
        y1="10"
        y2="10"
      />
      <line
        stroke="black"
        stroke-linecap="round"
        stroke-width="10"
        x1="10"
        x2="15"
        y1="12.5"
        y2="12.5"
      />
      <line
        stroke="black"
        stroke-linecap="round"
        stroke-width="10"
        x1="10"
        x2="15"
        y1="15"
        y2="15"
      />
    </svg>
  </div>
</body>
`;
